--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="https://github.com/san3ncrypt3d/Library">Library</a>
+            
           </nav>
         </header>
       </div>
