--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Secuirty Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/Services">Services</a>
             <a href="https://github.com/san3ncrypt3d/Library">Library</a>
             
           </nav>
