--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Secuirty Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/About">About</a>
             <a href="{{ site.baseurl }}/Services">Services</a>
             <a href="https://github.com/san3ncrypt3d/Library">Library</a>
             
