--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Secuirty Blog</a>
+            <a href="{{ site.baseurl }}/">Security Blog</a>
             <a href="{{ site.baseurl }}/About">About</a>
             <a href="{{ site.baseurl }}/Services">Services</a>
             <a href="https://github.com/san3ncrypt3d/Library">Library</a>
